Correction erreur Bootstrap et re-centrage images version mobile

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -5097,7 +5097,7 @@ textarea.input-group-sm>.input-group-btn>.btn {
 
 @media (min-width:768px) {
     .navbar-collapse {
-        width: auto;
+        width: 30%;
         border-top: 0;
         -webkit-box-shadow: none;
         box-shadow: none
@@ -7682,7 +7682,7 @@ button.close {
     margin: 1px;
     text-indent: -999px;
     cursor: pointer;
-    background-color: #000\9;
+    background-color: #000;
     background-color: rgba(0, 0, 0, 0);
     border: 1px solid #fff;
     border-radius: 10px
