--- a/style.css
+++ b/style.css
@@ -284,7 +284,7 @@ a:hover {
 
 .navbar {
     margin-bottom: 0;
-    z-index: 1;border: 2px; 
+    z-index: 1;
 }
 
 .navbar-brand {
@@ -656,7 +656,6 @@ a {
 }
 .col-sm-4, .col-sm-4 a{
     color: #fff!important;
-    
 }
 
 .container {
@@ -793,7 +792,7 @@ h4 {
 }
 
 .btn-atomic-tangerine:hover {
-    opacity:0.8;
+    opacity:0.6;
     color: #FFFFFF!important;
 }
 
